<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/card_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_padding">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_margin="4dip"
                android:contentDescription="@string/empty_text"
                android:padding="@dimen/card_padding"
                android:src="@drawable/app_icon"/>

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/appIcon"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_version"/>

            <TextView
                android:id="@+id/appReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appVersion"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_release_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appReleaseDate"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_developer_info"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@string/app_desc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@string/app_disclaimer"/>

            <include layout="@layout/separator_line"/>

            <Button
                android:id="@+id/viewSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/icon_github"
                android:drawablePadding="@dimen/padding_medium"
                android:drawableStart="@drawable/icon_github"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_small"
                android:text="@string/github_source_visible_url"
                android:textAllCaps="false"/>

            <include layout="@layout/separator_line"/>

            <Button
                android:id="@+id/viewLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/icon_text"
                android:drawablePadding="@dimen/padding_medium"
                android:drawableStart="@drawable/icon_github"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_small"
                android:text="@string/action_license"
                android:textAllCaps="false"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>