<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/txtPhoneType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtContactNumber"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:text=""
        android:textColor="@color/color_grey_light"
        android:textStyle="italic"/>

    <ImageButton
        android:id="@+id/btnWhatsAppMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_toLeftOf="@+id/btnCall"
        android:layout_toStartOf="@id/btnCall"
        android:contentDescription="@string/empty_text"
        android:padding="10dp"
        android:src="@drawable/ic_action_chat"
        android:text="@string/action_whatsapp_message"/>

    <ImageButton
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_toLeftOf="@+id/btnText"
        android:layout_toStartOf="@id/btnText"
        android:contentDescription="@string/empty_text"
        android:padding="10dp"
        android:src="@drawable/ic_action_call"
        android:text="@string/action_call"/>

    <ImageButton
        android:id="@+id/btnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="3dp"
        android:contentDescription="@string/empty_text"
        android:padding="10dp"
        android:src="@drawable/ic_action_chat"
        android:text="@string/action_message"/>

</RelativeLayout>