<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
	
	<TextView android:id="@+id/txtContactNumber"
		android:layout_alignParentLeft="true"
		android:gravity="center_vertical"
		android:ellipsize="marquee"
		android:textIsSelectable="true"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"/>
		
	<TextView android:id="@+id/txtPhoneType"
		android:text=""
		android:textStyle="italic"
		android:textColor="@color/light_gray"
		android:layout_alignParentLeft="true"
		android:gravity="center_vertical"
		android:padding="2dp"
		android:layout_below="@+id/txtContactNumber"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"/>
	
	<ImageButton android:id="@+id/btnCall"
		android:text="@string/action_call"
		android:layout_toLeftOf="@+id/btnText"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ic_action_call"
		android:contentDescription="@string/empty_text"
		android:layout_margin="3dp"
		android:padding="10dp"/>
		
	<ImageButton
	    android:id="@+id/btnText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_margin="3dp"
	    android:contentDescription="@string/empty_text"
	    android:padding="10dp"
	    android:src="@drawable/ic_action_chat"
	    android:text="@string/action_message" />
	
</RelativeLayout>